Partial_14Dec2021/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Special Pricing Request</label>
    <nameField>
        <displayFormat>ON-{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Pricing Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>