Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Addl_disc_on_APPL_STD_Disc__c.field-meta.xml
<CustomField>
    <fullName>Addl_disc_on_APPL_STD_Disc__c</fullName>
    <formula>(Total_Disc_on_MRP_CTC__c - APPL_STD_Discount__c) / APPL_STD_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addl disc on APPL STD Disc %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>