Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/APPL_STD_Discount__c.field-meta.xml
<CustomField>
    <fullName>APPL_STD_Discount__c</fullName>
    <label>APPL STD Disc %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>