Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/APPL_Std_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>APPL_Std_Discount_Amount__c</fullName>
    <formula>Order_Value__c * APPL_STD_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APPL Std Disc Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>