Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Cost_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Company__c</fullName>
    <formula>Order_Value__c - Final_Order_Value_after_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost to Company</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>