Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <label>Delivery Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Qty</fullName>
            </value>
            <value>
                <fullName>3 LOTS</fullName>
            </value>
            <value>
                <fullName>2 LOTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>