Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Disc_to_Customer_on_MRP__c.field-meta.xml
<CustomField>
    <fullName>Disc_to_Customer_on_MRP__c</fullName>
    <label>Disc to Customer on MRP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>