Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Disc_to_Customer_on_MRP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disc_to_Customer_on_MRP_Amount__c</fullName>
    <formula>Order_Value__c * Disc_to_Customer_on_MRP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disc to Customer on MRP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>