Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Extra_Discount_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Extra_Discount_to_Customer__c</fullName>
    <formula>Disc_to_Customer_on_MRP__c - APPL_STD_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Discount to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>