Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Final_od_Value_after_Disc__c.field-meta.xml
<CustomField>
    <fullName>Final_od_Value_after_Disc__c</fullName>
    <formula>IF(Special_Pricing_Request_Approved__c, 
((((Order_Value__c) - 
(Order_Value__c * APPL_STD_Discount__c))- 
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c))* Disc_to_Customer_on_MRP__c )- 
(((Order_Value__c)-(Order_Value__c * APPL_STD_Discount__c))- 
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c))* Disc_to_Customer_on_MRP__c )* ORC_Margin_to_Dlr_Dist__c ), 

((((Order_Value__c) - 
(Order_Value__c * APPL_STD_Discount__c))- 
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c)))- 
(((Order_Value__c)-(Order_Value__c * APPL_STD_Discount__c))- 
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c)))* ORC_Margin_to_Dlr_Dist__c ) - 

(Order_Value__c * Disc_to_Customer_on_MRP__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final od Value after Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>