Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Final_Order_Value_after_approval__c.field-meta.xml
<CustomField>
    <fullName>Final_Order_Value_after_approval__c</fullName>
    <label>Final Order Value after approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>