Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Final_Order_Value_after_Discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Order_Value_after_Discount__c</fullName>
    <formula>/*Order_Value__c - Total_Cost_To_Company__c*/

/*IF(Special_Pricing_Request_Approved__c,
((((Order_Value__c) -
(Order_Value__c * APPL_STD_Discount__c))-
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c))* Addl_Discount_Required__c )-
(((Order_Value__c)-(Order_Value__c * APPL_STD_Discount__c))-
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c))* Addl_Discount_Required__c )* ORC_Margin_to_Dlr_Dist__c ),

((((Order_Value__c) -
(Order_Value__c * APPL_STD_Discount__c))-
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c)))-
(((Order_Value__c)-(Order_Value__c * APPL_STD_Discount__c))-
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c)))* ORC_Margin_to_Dlr_Dist__c ) -

(Order_Value__c * Addl_Discount_Required__c)
)*/

 /*Order_Value__c - (Order_Value__c * Total_Cost_To_Company__c )*/
 
 ((Order_Value__c - Disc_to_Customer_on_MRP_Amount__c) - ORC_Margin_to_Dlr_Dist_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Order Value after Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>