Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/ORC_Margin_to_Dlr_Dist__c.field-meta.xml
<CustomField>
    <fullName>ORC_Margin_to_Dlr_Dist__c</fullName>
    <label>ORC/ Margin to Dlr/Dist %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>