Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/ORC_Margin_to_Dlr_Dist_Amount__c.field-meta.xml
<CustomField>
    <fullName>ORC_Margin_to_Dlr_Dist_Amount__c</fullName>
    <formula>IF((Disc_to_Customer_on_MRP_Amount__c&gt;0),
((Order_Value__c - Disc_to_Customer_on_MRP_Amount__c) * ORC_Margin_to_Dlr_Dist__c),
((Order_Value__c -  APPL_Std_Discount_Amount__c ) * ORC_Margin_to_Dlr_Dist__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORC/Margin to Dlr/Dist Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>