Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <label>Total MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>