Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20% advance with PO</fullName>
            </value>
            <value>
                <fullName>30 Days credit with PO</fullName>
            </value>
            <value>
                <fullName>90 Days credit with PO</fullName>
            </value>
            <value>
                <fullName>100% Payment against Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>