Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <label>Projects</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Special Pricing Requests</relationshipLabel>
    <relationshipName>Special_Pricing_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>