Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/report_project__c.field-meta.xml
<CustomField>
    <fullName>report_project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project spr</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Special Pricing Requests</relationshipLabel>
    <relationshipName>Special_Pricing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>