Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Special_Pricing_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing_Request_Approved__c</fullName>
    <formula>/*IF( Projects__r.Order_Max_Percentage__c&lt;=0.03 &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by Mr.Vijay&quot;),True,IF( AND(Projects__r.Order_Max_Percentage__c&gt;0.03,Projects__r.Order_Max_Percentage__c&lt;=0.07) &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by Mr.Vijay&quot;),false,IF(Projects__r.Order_Max_Percentage__c&gt;0.07 &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by Mr.Vijay&quot;),false,IF(AND(Projects__r.Order_Max_Percentage__c&gt;0.03,Projects__r.Order_Max_Percentage__c&lt;=0.07) &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by Mr.Dhilip&quot;),True,IF(Projects__r.Order_Max_Percentage__c&gt;0.07 &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by Mr.Dhilip&quot;),false,IF(Projects__r.Order_Max_Percentage__c&gt;0.07 &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by Mr.Gopkumar&quot;),True,false))))))*/


IF(Projects__r.Order_Max_Percentage__c &lt;= 0.03 &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by TL&quot;),TRUE,

IF(Projects__r.Order_Max_Percentage__c &gt; 0.03 &amp;&amp; ISPICKVAL( Projects__r.Order_Status1__c,&quot;Approved by Projects Head&quot;),TRUE,FALSE
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Pricing Request Approved</label>
    <type>Checkbox</type>
</CustomField>