Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Total_Disc_on_MRP_CTC__c.field-meta.xml
<CustomField>
    <fullName>Total_Disc_on_MRP_CTC__c</fullName>
    <formula>/*((((Order_Value__c) -
(Order_Value__c * APPL_STD_Discount__c))-
((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c))* Addl_Discount_Required__c )-
(((Order_Value__c)-(Order_Value__c * APPL_STD_Discount__c))-

((Order_Value__c)- (Order_Value__c * APPL_STD_Discount__c))* Addl_Discount_Required__c )* ORC_Margin_to_Dlr_Dist__c )*/


/*APPL_STD_Discount__c + 
((1-APPL_STD_Discount__c) * Disc_to_Customer_on_MRP__c) +
((1-APPL_STD_Discount__c) * ORC_Margin_to_Dlr_Dist__c)*/

(1-(Final_Order_Value_after_Discount__c/Order_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Disc on MRP (CTC) %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>