Partial_14Dec2021/force-app/main/default/objects/Order__c/fields/Why_Addl_Disc_Rqd__c.field-meta.xml
<CustomField>
    <fullName>Why_Addl_Disc_Rqd__c</fullName>
    <label>Why Addl Disc Rqd?</label>
    <type>TextArea</type>
</CustomField>